more spacing fixes for pricing block

--- a/landscape/dark.scss
+++ b/landscape/dark.scss
@@ -332,6 +332,7 @@ $imageWidthMd: 100px;
     }
   .webkite-prices-wrap {padding-left:0;}
   .webkite-prices {margin-left:0;}
+  .webkite-list-price-value {margin-top:1px;}
   .webkite-price-label {width:100%; display:block;}
   }
 
