--- a/portrait/dark.scss
+++ b/portrait/dark.scss
@@ -328,7 +328,7 @@ $lighterOpacity: rgba(255,255,255,.15);
       margin-bottom:0;
       font-family: 'Libre Baskerville', 'Georgia', serif;
       font-style:italic;
-      font-size:0.9em;
+      font-size:13px;
       line-height:1.1;
       color:$medOpacity;
       text-align:left;
@@ -349,7 +349,7 @@ $lighterOpacity: rgba(255,255,255,.15);
     .webkite-price{
       display: inline-block;
       font-family:'Libre Baskerville', 'Georgia', serif;
-      font-size:1.3em;
+      font-size:18px;
       line-height:1;
       width: 100%;
       color:$medOpacity;
@@ -357,13 +357,16 @@ $lighterOpacity: rgba(255,255,255,.15);
     .webkite-price-value {
       display:inline-block;
       max-width:100%;
+      line-height:1.2;
+      padding-top:0;
       overflow:hidden;
       white-space:nowrap;
       text-overflow:ellipsis;
       }
     .webkite-price-label{
       font-family: 'Open Sans', 'Arial', sans-serif;
-      font-size:0.65em;
+      font-size:13px;
+      line-height:1.1;
       text-transform: uppercase;
       display:inline-block;
       color: $medOpacity;
@@ -570,6 +573,7 @@ $lighterOpacity: rgba(255,255,255,.15);
       .webkite-block.webkite-block-thirty {width:35%;}
       .webkite-prices-wrap {padding-left:0;}
       .webkite-prices {margin-left:0;}
+      .webkite-list-price-value {margin-top:1px; padding-top:2px;}
       .webkite-price-label {width:100%; display:block;}
       .until-md {display:none!important;}
       .md-only {display:inline-block!important;}  
