--- a/portrait/light.scss
+++ b/portrait/light.scss
@@ -357,6 +357,7 @@ $itemBackground: rgba(255,255,255,.5);
       display:inline-block;
       font-weight:bold;
       line-height:1.2;
+      padding-top:0;
       max-width:100%;
       overflow:hidden;
       white-space:nowrap;
@@ -572,6 +573,7 @@ $itemBackground: rgba(255,255,255,.5);
       .webkite-block.webkite-block-thirty {width:35%;}
       .webkite-prices-wrap {padding-left:0;}
       .webkite-prices {margin-left:0;}
+      .webkite-list-price-value {margin-top:1px; padding-top:2px;}
       .webkite-price-label {width:100%; display:block;}
       .until-md {display:none!important;}
       .md-only {display:inline-block!important;}  
